(fix) Fixed message wrapping issue

--- a/resources/assets/sass/chat/chatbox.scss
+++ b/resources/assets/sass/chat/chatbox.scss
@@ -431,7 +431,7 @@
 
             p {
               color: #2C4151;
-              max-width: 600px;
+              max-width: 75%;
               line-height: 130%;
               display: inline-flex;
 
